--- a/our-experience-app/src/views/layout.pug
+++ b/our-experience-app/src/views/layout.pug
@@ -4,6 +4,10 @@ html(lang='en')
     title= title
     meta(charset='utf-8')
     meta(name='viewport', content='width=device-width, initial-scale=1')
-    link(rel='stylesheet', href='/stylesheets/style.css')
+
+    block style
+      link(rel='stylesheet', href='/stylesheets/style.css')
+
+    block scripts
   body
     block content
