initial nav setup: (had to deactivate helmet)

--- a/our-experience-app/src/public/stylesheets/style.css
+++ b/our-experience-app/src/public/stylesheets/style.css
@@ -1,8 +1,16 @@
 body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  /* padding: 50px; */
+  /* font: 14px 'Lucida Grande', Helvetica, Arial, sans-serif; */
+}
+
+.navbar-custom {
+  background: #efeded;
+}
+
+.sfu-theme {
+  color: #a6192e !important;
 }
 
 a {
-  color: #00B7FF;
+  color: #00b7ff;
 }
