--- a/our-experience-app/src/views/job.pug
+++ b/our-experience-app/src/views/job.pug
@@ -1,6 +1,6 @@
 extends layout
 
-block style
+append style
     link(rel='stylesheet' type='text/css' href="/stylesheets/job.css")
 
 block content
