--- a/our-experience-app/src/views/partials/header.pug
+++ b/our-experience-app/src/views/partials/header.pug
@@ -1,22 +1,29 @@
-nav.navbar.navbar-expand-sm.navbar-light.navbar-custom
+nav.navbar.navbar-expand-sm.sticky-top.navbar-light.navbar-custom
   .container-fluid
     a.navbar-brand(href='#') ourExperience 
     button.navbar-toggler(type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation")
       span.navbar-toggler-icon
     #navbarNav.collapse.navbar-collapse
       ul.navbar-nav
-        li.navbar-nav
-          a.nav-link.sfu-theme(aria-current="page" href="#") Homepage
-        li.navbar-nav
-          a.nav-link.sfu-theme(href="#") Job Postings
-        li.navbar-nav
-          a.nav-link.sfu-theme(href="#") Mail
-        li.navbar-nav
-          a.nav-link.sfu-theme(href="#") Calendar 
-        li.navbar-nav
-          a.nav-link.sfu-theme(href="#") Profile 
+        li.nav-item
+          a.nav-link(aria-current="page" href="/student/dashboard") Homepage
+        li.nav-item
+          a.nav-link(href="/career/postings") Job Postings
+        li.nav-item
+          a.nav-link(href="#") Mail
+        li.nav-item
+          a.nav-link(href="#") Calendar 
+        li.nav-item
+          a.nav-link(href="#") Profile 
       ul.navbar-nav.ms-sm-auto
-        li.navbar-nav
-          a.nav-link.sfu-theme(href="#") Logout   
+        li.nav-item.dropdown 
+          a.nav-link.dropdown-toggle(href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false") Admin Options 
+          ul.dropdown-menu(aria-labelledby="navbarDropdownMenuLink")
+            li
+              a.dropdown-item(href="#") Add Company
+        li.nav-item
+          a.nav-link(href="#") Logout
+        
+        
 
         
