--- a/our-experience-app/src/views/layout.pug
+++ b/our-experience-app/src/views/layout.pug
@@ -14,7 +14,8 @@ html(lang='en')
 
   body
     include partials/header
-    main.container-fluid.ps-5.mt-5
+    .container.mt-1
+      include partials/flash
       block content
     script(src='/javascripts/validateForms.js')
     script(src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous")
