--- a/our-experience-app/src/views/partials/flash.pug
+++ b/our-experience-app/src/views/partials/flash.pug
@@ -5,9 +5,9 @@ if (success && success.length)
         div= s
       button(type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close")
 
-if (errors && errors.length)
+if (error && error.length)
   .container.mt-5
     .alert.alert-danger.alert-dismissible.fade.show(role="alert")
-      for error in errors 
-        div= error
+      for err in error
+        div= err
       button(type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close")
