--- a/our-experience-app/src/views/career_postings.pug
+++ b/our-experience-app/src/views/career_postings.pug
@@ -2,6 +2,8 @@ extends layout
 
 append style
   link(rel='stylesheet' type='text/css' href="https://cdn.datatables.net/1.11.3/css/jquery.dataTables.css")
+  link(rel='stylesheet' type='text/css' href="/stylesheets/dashboard.css")
+  link(rel='stylesheet' type='text/css' href="http://fonts.cdnfonts.com/css/habibi")
 
 append scripts
   script(src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js")
