--- a/our-experience-app/src/views/job.pug
+++ b/our-experience-app/src/views/job.pug
@@ -2,9 +2,10 @@ extends layout
 
 append style
     link(rel='stylesheet' type='text/css' href="/stylesheets/job.css")
-
+    link(rel='stylesheet' type='text/css' href="/stylesheets/dashboard.css")
+    link(rel='stylesheet' type='text/css' href="http://fonts.cdnfonts.com/css/habibi")
 block content
-  section#wrapper
+  section.content#wrapper
     h1= title
     table(border=1)
       tr.label
