--- a/our-experience-app/src/views/partials/header.pug
+++ b/our-experience-app/src/views/partials/header.pug
@@ -1,6 +1,11 @@
-nav.navbar.navbar-expand-sm.sticky-top.navbar-light.navbar-custom
-  .container-fluid
-    a.navbar-brand(href='#') ourExperience 
+append style
+  link(rel='stylesheet' type='text/css' href="http://fonts.cdnfonts.com/css/habibi")
+
+img(src='https://upload.wikimedia.org/wikipedia/commons/thumb/b/b7/SFU-block-logo.svg/1280px-SFU-block-logo.svg.png' alt='SFU' width="128" height="64" style="float:left")
+h1.header(href='#') &nbspourExperience 
+br
+nav.navbar.navbar-expand-md.sticky-top.navbar-light.navbar-custom
+  .container-fluid   
     button.navbar-toggler(type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation")
       span.navbar-toggler-icon
     #navbarNav.collapse.navbar-collapse
