--- a/our-experience-app/src/views/studentUpload.pug
+++ b/our-experience-app/src/views/studentUpload.pug
@@ -4,14 +4,18 @@ block content
   .container
     h1= title 
 
-    .mb-3.row
-      .col-sm-7
-        form(action="/student/upload" method='POST' enctype='multipart/form-data')
-          .mb-3
-            label(for="formFile" class="form-label sfu-theme") Pdf File Submission
-            input(class="form-control" name='pdfUpload' type="file" id="formFile")
-          .mb-3
-            button(type='submit').btn.btn-primary Submit
-      br
-      if file && filename
-        a(href='/student/test') download test
+    form(action="/student/upload" method='POST' enctype='multipart/form-data').mt-3.row
+
+      .col-sm-7.mb-3
+        <select class="form-select text-center" aria-label="Default select example">
+          <option selected>-- select --</option>
+          <option value="1">One</option>
+          <option value="2">Two</option>
+          <option value="3">Three</option>
+        </select>
+        
+        label(for="formFile" class="form-label sfu-theme") Pdf File Submission
+        input(class="form-control" name='pdfUpload' type="file" id="formFile" required)
+      .mb-3
+        button(type='submit').btn.btn-primary Submit
+    
