--- a/our-experience-app/src/views/application_list.pug
+++ b/our-experience-app/src/views/application_list.pug
@@ -13,5 +13,5 @@ block content
         tr 
           td #{ application.id }
           td #{ application.posting.title }
-          td Default 
+          td #{ application.posting.company.name }
           td #{ application.status }
