--- a/our-experience-app/src/views/partials/header.pug
+++ b/our-experience-app/src/views/partials/header.pug
@@ -15,6 +15,8 @@ nav.navbar.navbar-expand-sm.sticky-top.navbar-light.navbar-custom
           a.nav-link(href="#") Calendar 
         li.nav-item
           a.nav-link(href="#") Profile 
+        li.nav-item
+          a.nav-link(href="/student/upload") Upload Document 
       ul.navbar-nav.ms-sm-auto
         li.nav-item.dropdown 
           a.nav-link.dropdown-toggle(href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false") Admin Options 
