homepage: centered navbar & made image redirect to homepage

--- a/our-experience-app/src/public/stylesheets/style.css
+++ b/our-experience-app/src/public/stylesheets/style.css
@@ -5,6 +5,10 @@ body {
 /* change the link color */
 /* change the color of active or hovered links */
 
+#branding {
+  color: black;
+}
+
 .header {
   padding-top: 12pt;
   margin-bottom: -12pt;
