--- a/our-experience-app/src/views/application_list.pug
+++ b/our-experience-app/src/views/application_list.pug
@@ -19,6 +19,8 @@ block content
       th Job Title
       th Organization 
       th Status
+      th Application Submitted At 
+      th Application Deadline
     tbody 
       for application in applications 
         tr 
@@ -26,3 +28,5 @@ block content
           td #{ application.posting.title }
           td #{ application.posting.company.name }
           td #{ application.status }
+          td #{ DateTime.fromJSDate(application.submittedAt).toLocaleString(DateTime.DATETIME_MED) }
+          td #{ DateTime.fromJSDate(application.posting.deadline).toLocaleString(DateTime.DATETIME_MED) }
