--- a/our-experience-app/src/views/partials/header.pug
+++ b/our-experience-app/src/views/partials/header.pug
@@ -20,9 +20,7 @@ nav.navbar.navbar-expand-md.sticky-top.navbar-light.navbar-custom
         li.nav-item
           a.nav-link(href="#") Calendar 
         li.nav-item
-          a.nav-link(href="#") Profile 
-        li.nav-item
-          a.nav-link(href="/student/upload") Upload Document 
+          a.nav-link(href="/student/upload") Profile
       ul.navbar-nav.ms-sm-auto
         li.nav-item.dropdown 
           a.nav-link.dropdown-toggle(href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false") Admin Options 
