fixed some html validity errors

--- a/our-experience-app/src/views/partials/header.pug
+++ b/our-experience-app/src/views/partials/header.pug
@@ -3,7 +3,7 @@ append style
 
 a(href="/")#branding
   img(src='https://upload.wikimedia.org/wikipedia/commons/thumb/b/b7/SFU-block-logo.svg/1280px-SFU-block-logo.svg.png' alt='SFU' width="128" height="64" style="float:left")
-  h1.header(href='#') &nbspourExperience 
+  h1.header &nbspourExperience 
 br
 nav.navbar.navbar-expand-md.sticky-top.navbar-light.navbar-custom
   .container-fluid   
