--- a/our-experience-app/src/views/application_list.pug
+++ b/our-experience-app/src/views/application_list.pug
@@ -2,6 +2,7 @@ extends layout
 
 append style 
   link(rel='stylesheet' type='text/css' href="https://cdn.datatables.net/1.11.3/css/jquery.dataTables.css")
+  link(rel='stylesheet' type='text/css' href="/stylesheets/dashboard.css")
 
 append scripts 
   script(src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js")
