--- a/our-experience-app/src/views/application.pug
+++ b/our-experience-app/src/views/application.pug
@@ -1,6 +1,35 @@
 extends layout 
 
+append style 
+  link(rel='stylesheet' type='text/css' href="/stylesheets/dashboard.css")
+
 block content 
   .container
     h1 Apply: #{title}
+
+    form(action=`/career/job/${job.id}/apply` method='POST').mt-3.row
+      .col-sm-8.mb-3
+        label(for="formFile" class="form-label sfu-theme") Resume*:
+        select(class="form-select text-center" id='formFile' name='resume' required)
+          option(selected disabled value="") -- select filetype --
+            each document in formTypes.resume 
+              option(value=document.id) #{document.filepath}
+        label(for="coverLetterFile" class="form-label sfu-theme") Cover Letter:
+        select(class="form-select text-center" id='coverLetterFile' name='coverLetter')
+          option(selected disabled value="") -- select filetype --
+            each document in formTypes.coverLetter
+              option(value=document.id) #{document.filepath}
+        label(for="transcriptFile" class="form-label sfu-theme") Transcript:
+        select(class="form-select text-center" id='transcriptFile' name='transcript')
+          option(selected disabled value="") -- select filetype --
+            each document in formTypes.transcript
+              option(value=document.id) #{document.filepath}
+        label(for="sisFile" class="form-label sfu-theme") Sis:
+        select(class="form-select text-center" id='sisFile' name='sis')
+          option(selected disabled value="") -- select filetype --
+            each document in formTypes.sis
+              option(value=document.id) #{document.filepath}
+        
+      .mb-3
+        button(type='submit').btn.btn-primary Submit
 
