5: Add check in delete method to ensure param is number, add applications to navbar

--- a/our-experience-app/src/views/partials/header.pug
+++ b/our-experience-app/src/views/partials/header.pug
@@ -21,6 +21,8 @@ nav.navbar.navbar-expand-md.sticky-top.navbar-light.navbar-custom
           a.nav-link(href="#") Calendar 
         li.nav-item
           a.nav-link(href="/student/upload") Profile
+        li.nav-item 
+          a.nav-link(href="/applications") My Applications
       ul.navbar-nav.ms-sm-auto
         li.nav-item.dropdown 
           a.nav-link.dropdown-toggle(href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false") Admin Options 
