[minor] button styling change

--- a/our-experience-app/src/views/application.pug
+++ b/our-experience-app/src/views/application.pug
@@ -31,5 +31,5 @@ block content
             option(value=document.id) #{document.filepath}
         
       .mb-3
-        button(type='submit').btn.btn-primary Submit
+        button(type='submit') Submit
 
