skeleton route setup

--- a/our-experience-app/src/views/studentUpload.pug
+++ b/our-experience-app/src/views/studentUpload.pug
@@ -32,7 +32,7 @@ block content
             label(for="formFile" class="form-label sfu-theme") Pdf File Submission
             input(class="form-control" name='pdfUpload' type="file" id="formFile" required)
           .mb-3
-            button(type='submit').btn.btn-primary Submit
+            button(type='submit') Submit
     
       
     
