basic layout to display files & altered document table to account for filename

--- a/our-experience-app/src/views/partials/header.pug
+++ b/our-experience-app/src/views/partials/header.pug
@@ -16,7 +16,7 @@ nav.navbar.navbar-expand-md.sticky-top.navbar-light.navbar-custom
         li.nav-item
           a.nav-link(href="/career/postings") Job Postings
         li.nav-item
-          a.nav-link(href="#") Mail
+          a.nav-link(href="/documents") Documents
         li.nav-item
           a.nav-link(href="#") Calendar 
         li.nav-item
