13: Add route setup for events

--- a/our-experience-app/src/views/partials/header.pug
+++ b/our-experience-app/src/views/partials/header.pug
@@ -15,14 +15,14 @@ nav.navbar.navbar-expand-md.sticky-top.navbar-light.navbar-custom
           a.nav-link(aria-current="page" href="/student/dashboard") Homepage
         li.nav-item
           a.nav-link(href="/career/postings") Job Postings
-        li.nav-item
-          a.nav-link(href="#") Mail
+        li.nav-item 
+          a.nav-link(href="/applications") My Applications
         li.nav-item
           a.nav-link(href="#") Calendar 
         li.nav-item
           a.nav-link(href="/student/upload") Profile
         li.nav-item 
-          a.nav-link(href="/applications") My Applications
+          a.nav-link(href="/events") Events
       ul.navbar-nav.ms-sm-auto
         li.nav-item.dropdown 
           a.nav-link.dropdown-toggle(href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false") Admin Options 
