--- a/our-experience-app/src/views/document_list.pug
+++ b/our-experience-app/src/views/document_list.pug
@@ -28,6 +28,8 @@ block content
             td #{doc.filename}
             td #{ doc.documentType }
             td 
+              a(href=`/documents/${doc.id}/view`)
+                button View 
               a(href=`/documents/${doc.id}/download`)
                 button download 
               button(class='delete-document-button' data-document-id=doc.id) Delete
