update to views: extracted datatables lib includes into thier file and updated the career postings view. also updated styling for datatables to take advantage of bootstrap5

--- a/our-experience-app/src/views/career_postings.pug
+++ b/our-experience-app/src/views/career_postings.pug
@@ -1,13 +1,12 @@
 extends layout
 
+include datatables
+
 append style
-  link(rel='stylesheet' type='text/css' href="https://cdn.datatables.net/1.11.3/css/jquery.dataTables.css")
   link(rel='stylesheet' type='text/css' href="/stylesheets/dashboard.css")
   link(rel='stylesheet' type='text/css' href="http://fonts.cdnfonts.com/css/habibi")
 
 append scripts
-  script(src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js")
-  script(src="https://cdn.datatables.net/1.11.3/js/jquery.dataTables.js")
   script.
     $(document).ready( function () {
       $('#job_postings').DataTable();
@@ -15,7 +14,7 @@ append scripts
 
 block content
   h1= title
-  table#job_postings.display
+  table#job_postings.table.table-striped
     thead
         th Id
         th Job Title
@@ -27,5 +26,3 @@ block content
           td
             a(href='/career/job/'+job.id) #{ job.job_postings[0].title }
           td #{ job.name }
-
-  a(href="/") Back to Dashboard
