13: Add markup for single event, pass not found to next middleware

--- a/our-experience-app/src/views/event.pug
+++ b/our-experience-app/src/views/event.pug
@@ -5,4 +5,17 @@ append style
 
 block content 
   .container 
-    h1 Event: #{event.title}
+    h1 Event: #{ event.title }
+
+    dl 
+      dt Description 
+      dd #{ event.description }
+
+      dt Date 
+      dd #{ event.date }
+
+      dt Location 
+      dd #{ event.location }
+
+      dt Capacity 
+      dd #{ event.capacity }
