13: Add calendar view, hardcoded for now

--- a/our-experience-app/src/views/partials/header.pug
+++ b/our-experience-app/src/views/partials/header.pug
@@ -18,7 +18,7 @@ nav.navbar.navbar-expand-md.sticky-top.navbar-light.navbar-custom
         li.nav-item 
           a.nav-link(href="/applications") My Applications
         li.nav-item
-          a.nav-link(href="#") Calendar 
+          a.nav-link(href="/events/my-calendar") Calendar 
         li.nav-item
           a.nav-link(href="/student/upload") Profile
         li.nav-item 
