finished up addeding new job post functionality for admin. seperated the form into its own pug file

--- a/our-experience-app/src/views/admin_base.pug
+++ b/our-experience-app/src/views/admin_base.pug
@@ -15,7 +15,7 @@ html(lang='en')
   body
     include partials/flash
 
-    main.container.mt-5(style='border: 1px solid black;')
+    main.container.mt-5
       block content
 
 
