--- a/our-experience-app/src/views/admin_jobs.pug
+++ b/our-experience-app/src/views/admin_jobs.pug
@@ -11,8 +11,7 @@ append scripts
 block content
   h1= title
 
-  section.container-fluid
-    a.btn.btn-primary( href='#' role='button') Add post
+  include job_post_form
 
   section.container.mt-5
     table#job_postings.table.table-striped
@@ -23,16 +22,16 @@ block content
           th Edit
           th Delete
       tbody
-        for job in postings
+        for job in job_posts
           tr
             td(scope='row') #{ job.id }
             td
-              a( href='/career/job/'+job.id) #{ job.job_postings[0].title }
-            td #{ job.name }
+              a( href='/career/job/'+job.id) #{ job.title }
+            td #{ job.company.name }
             td
-              a.btn.btn-primary( href='/update_job/'+job.id role='button') Edit
+              a.btn.btn-primary( role='button') Edit
             td
-              a.btn.btn-danger( href='/delete_job/'+job.id role='button') Delete
+              a.btn.btn-danger( role='button') Delete
 
   footer
     a( href="/admin") Back to Dashboard
