13: Add attendee count

--- a/our-experience-app/src/views/event.pug
+++ b/our-experience-app/src/views/event.pug
@@ -22,7 +22,7 @@ block content
       dd #{ event.location }
 
       dt Capacity 
-      dd #{ event.capacity }
+      dd #{ event.attendeeCount } / #{ event.capacity }
 
     if (!isUserRegistered)
       button(class='registration-button' data-event-id=event.id data-is-registered=isUserRegistered) Register
