--- a/our-experience-app/src/views/event_list.pug
+++ b/our-experience-app/src/views/event_list.pug
@@ -27,4 +27,4 @@ block content
             a(href=`/events/${event.id}`) #{ event.title }
           td #{ DateTime.fromJSDate(event.date).toLocaleString(DateTime.DATETIME_MED) }
           td #{ event.location }
-          td #{ event.capacity }
+          td #{ event.attendeeCount } / #{ event.capacity }
