update views and controllers related to job details for admin. also updated role type admin to Staff to match the db

--- a/our-experience-app/src/views/admin/jobs.pug
+++ b/our-experience-app/src/views/admin/jobs.pug
@@ -29,7 +29,7 @@ block content
           tr
             td #{ job.id }
             td
-              a( href='/career/job/'+job.id) #{ job.title }
+              a( href='/admin/job/'+job.id) #{ job.title }
             td #{ job.company.name }
             td
               a.btn.btn-primary( role='button' data-bs-toggle='modal' data-bs-target='#update-modal' job_id=job.id) Edit
