updated job detail view for both student and staff, also added datetime formatting with moment.js

--- a/our-experience-app/src/views/admin/job.pug
+++ b/our-experience-app/src/views/admin/job.pug
@@ -1,13 +1,13 @@
 extends base
 
 append style
-    link(rel='stylesheet' type='text/css' href="/stylesheets/job.css")
-    link(rel='stylesheet' type='text/css' href="/stylesheets/dashboard.css")
     link(rel='stylesheet' type='text/css' href="http://fonts.cdnfonts.com/css/habibi")
 block content
   section.content#wrapper
     h1= title
-    table(border=1)
+
+    section.container.mt-5
+    table(border=1).table.table-striped
       tr.label
         td Organization
       tr.value
@@ -16,7 +16,8 @@ block content
       tr.label
         td Deadline
       tr.value
-        td #{ job.deadline }
+        td= moment(job.deadline).format('MMMM Do YYYY, h:mm:ss a')
+
 
       tr.label
         td Description
