13: Add check for registration capacity, change route handlers to use req.user

--- a/our-experience-app/src/views/event.pug
+++ b/our-experience-app/src/views/event.pug
@@ -24,8 +24,8 @@ block content
       dt Capacity 
       dd #{ event.attendeeCount } / #{ event.capacity }
 
-    if (event.date > Date.now() && event.attendeedCount < event.capacity)
-      if (!isUserRegistered)
+    if (event.date > new Date())
+      if (!isUserRegistered && event.attendeeCount < event.capacity)
         button(class='registration-button' data-event-id=event.id data-is-registered=isUserRegistered) Register
-      else 
+      else if (isUserRegistered) 
         button(class='registration-button' data-event-id=event.id data-is-registered=isUserRegistered) Unregister
